<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtomText">I\'m a buttom</string>
    <string name="text">Login</string>
    <string name="Buttom">Login</string>
    <string name="login">login name</string>
    <string name="Pasword">pasword</string>
    <string name="pasword">pasword</string>
    <string name="radB">RadioButton</string>
    <string name="chackB">CheckBox</string>
    <string name="switchB">What does this do?</string>
    <string name="dialog_message">Do you want to finish the activity</string>
    <string name="ok">OK</string>
    <string name="dialog_title">CheckBox</string>
    <string name="cancel">Cancel</string>
    <string name="chat">Start Chat</string>
    <string name="send">Send</string>
    <string name="edit"> </string>
    <string name="btWeather">Weather Forecast</string>
    <string name="ct">Curent temperature</string>
    <string name="mxt">Max temperature</string>
    <string name="mint">Min temperature</string>
    <string name="messageHere">MessageHere</string>
    <string name="messageTextID">ID=</string>
    <string name="toolbat">Test Toolbar</string>
    <string name="delete_this_message">DELETE THIS MESSAGE</string>
    <string name="username">New Message</string>
    <string name="signin">OK</string>
    <string name="ook">OK</string>
    <string name="ddialog_title">Do you want to go back?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="title_activity_">Activity</string>


</resources>
