<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.milab.androidlabs.MessageFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/MessageHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messageHere" />

    <TextView
        android:id="@id/textMessageID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/messageTextID" />

    <Button
        android:id="@+id/buttonDeleteThisMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/delete_this_message"
        android:textSize="30sp" />

</RelativeLayout>
