<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.milab.androidlabs.WeatherForecast">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:src="@android:drawable/ic_menu_gallery"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="4dp" />


    <TextView
        android:id="@+id/curentT"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_above="@+id/minT"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="@string/ct"
                />

    <TextView
        android:id="@+id/minT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/maxT"
        android:layout_alignEnd="@+id/maxT"
        android:layout_marginBottom="35dp"
        android:text="@string/mint"
         />

    <TextView
        android:id="@+id/maxT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:text="@string/mxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintVertical_bias="0.867" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/curentT"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.846" />


</RelativeLayout>
